# lansforsakringar

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  destroy.yml
docs/: architecture.md  implementation-plan.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  config.ts  index.css
frontend/src/api/: client.ts
infra/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk.out/: ChatAuthStack.assets.json  ChatAuthStack.template.json  ChatComputeStack.assets.json  ChatComputeStack.template.json  ChatDataStack.assets.json  ChatDataStack.template.json  ChatFrontendStack.assets.json  ChatFrontendStack.template.json  ChatNetworkStack.assets.json  ChatNetworkStack.template.json  manifest.json  tree.json
infra/lib/: auth-stack.ts  compute-stack.ts  data-stack.ts  frontend-stack.ts  network-stack.ts
services/chat-api/: pyproject.toml
services/chat-api/app/: config.py  main.py
services/chat-api/app/api/: auth.py  deps.py  routes.py  schemas.py
services/chat-api/app/domain/: errors.py
services/chat-api/app/providers/: base.py  bedrock.py
services/chat-api/app/repositories/: base.py  dynamo.py  memory.py
services/chat-api/app/services/: chat_service.py
services/chat-api/scripts/: create_local_table.py
services/chat-api/tests/: conftest.py
services/chat-api/tests/integration/: test_dynamo_repository.py
services/chat-api/tests/unit/: test_api.py  test_service.py
(+25 files in other folders)
